added simple executor binary to execute pipeline locally for testing purposes; added parameters to pipelines which can be specified as input parameters when the pipeline is created
