# internal/persistence/database/model/job.go
@@ -10,9 +10,16 @@ import "github.com/zebresel-com/mongodm"
 // TODO: cross reference pipeline from job...
 // TODO: would it be better to copy a pipeline here so if we change the pipeline this job wont be affected?
 
+// JobParameter - Database struct describing a pipeline job parameter
+type JobParameter struct {
+	Name  string `json:"name" bson:"name"`
+	Value string `json:"value" bson:"value"`
+}
+
 // Job - Database struct describing a pipeline job
 type Job struct {
 	mongodm.DocumentBase `json:",inline" bson:",inline"`
-	Name                 string    `json:"name" bson:"name"`
-	Pipeline             *Pipeline `json:"pipeline" bson:"pipeline"`
+	Name                 string         `json:"name" bson:"name"`
+	Parameters           []JobParameter `json:"parameters" bson:"parameters"`
+	Pipeline             *Pipeline      `json:"pipeline" bson:"pipeline"`
 }
